@@ -1,3 +1,8 @@
+2005-05-25  Mike Kestner  <mkestner@novell.com>
+
+	* configure.in.in : remove crosspkgdir arg that causes trouble with
+	newer pkgconfigs.
+
 2005-05-24  Dan Winship  <danw@novell.com>
 
 	* parser/gapi2xml.pl: Make the enum value parser do the right
